--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+ssh://git@github.com/5app/dare.git"
+		"url": "git+ssh://git@github.com/MrSwitch/dare.git"
 	},
 	"keywords": [
 		"Database",
@@ -45,9 +45,9 @@
 	"author": "Andrew Dodson",
 	"license": "MIT",
 	"bugs": {
-		"url": "https://github.com/5app/dare/issues"
+		"url": "https://github.com/MrSwitch/dare/issues"
 	},
-	"homepage": "https://github.com/5app/dare#readme",
+	"homepage": "https://github.com/MrSwitch/dare#readme",
 	"files": [
 		"src/",
 		"types/"
@@ -55,35 +55,35 @@
 	"devDependencies": {
 		"@5app/prettier-config": "^1.0.4",
 		"@5app/semantic-release-config": "^2.0.0",
-		"@commitlint/cli": "^19.6.1",
-		"@commitlint/config-conventional": "^19.6.0",
+		"@commitlint/cli": "^20.2.0",
+		"@commitlint/config-conventional": "^20.2.0",
 		"@types/mocha": "^10.0.10",
 		"c8": "^10.1.3",
 		"chai": "^4.5.0",
-		"chai-as-promised": "^8.0.1",
+		"chai-as-promised": "^8.0.2",
 		"coveralls": "^3.1.1",
-		"debug": "^4.4.0",
+		"debug": "^4.4.3",
 		"eslint": "^8.57.1",
 		"eslint-config-5app": "^0.19.1",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-n": "^17.15.1",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-n": "^17.23.1",
 		"eslint-plugin-promise": "^7.2.1",
 		"eslint-plugin-security": "^3.0.1",
 		"husky": "^9.1.7",
 		"is-ci": "^4.1.0",
-		"mocha": "^11.1.0",
+		"mocha": "^11.7.5",
 		"mocha-circleci-reporter": "0.0.3",
-		"mysql2": "3.14",
-		"pg": "^8.13.1",
-		"pg-query-stream": "^4.7.1",
-		"prettier": "^3.4.2",
-		"semantic-release": "^24.2.1",
-		"typescript": "^5.7.3"
+		"mysql2": "3.16",
+		"pg": "^8.16.3",
+		"pg-query-stream": "^4.10.3",
+		"prettier": "^3.7.4",
+		"semantic-release": "^25.0.2",
+		"typescript": "^5.9.3"
 	},
 	"dependencies": {
 		"semver-compare": "^1.0.0",
 		"sql-template-tag": "^5.2.1",
-		"tricks": "^2.1.0"
+		"tricks": "^2.4.0"
 	},
 	"commitlint": {
 		"extends": [
