--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,9 @@ jobs:
         name: Release Package
         needs: [test, test-matrix, integrations]
         runs-on: ubuntu-latest
+        permissions:
+            id-token: write  # Required for OIDC
+            contents: read
         steps:
             - uses: actions/checkout@master
             - uses: actions/setup-node@v4
@@ -69,4 +72,3 @@ jobs:
             - run: npx semantic-release
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
