--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,6 @@ name: Node CI
 on: [push]
 
 jobs:
-
     test:
         name: Run Tests
         runs-on: ubuntu-latest
@@ -15,11 +14,11 @@ jobs:
             - run: npm i
             - name: run mocha tests
               env:
-                MOCHA_FILE: /tmp/test-results/mocha.xml
-                COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+                  MOCHA_FILE: /tmp/test-results/mocha.xml
+                  COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
               run: |
-                mkdir /tmp/test-results
-                npm run test:ci
+                  mkdir /tmp/test-results
+                  npm run test:ci
 
     test-matrix:
         name: Test node:${{ matrix.node_version }} on ${{ matrix.os }}
@@ -44,7 +43,14 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                db_engine: [ 'mysql:5.6', 'mysql:5.7.40', 'mysql:8.0.23', 'mariadb:11.4', 'postgres:16.3' ]
+                db_engine:
+                    [
+                        'mysql:5.6',
+                        'mysql:5.7.40',
+                        'mysql:8.0.23',
+                        'mariadb:11.4',
+                        'postgres:16.3',
+                    ]
         steps:
             - uses: actions/checkout@master
             - uses: actions/setup-node@v4
@@ -60,7 +66,7 @@ jobs:
         needs: [test, test-matrix, integrations]
         runs-on: ubuntu-latest
         permissions:
-            id-token: write  # Required for OIDC
+            id-token: write # Required for OIDC
             contents: write # to be able to publish a GitHub release
             issues: write # to be able to comment on released issues
             pull-requests: write # to be able to comment on released pull requests
