--- a/package.json
+++ b/package.json
@@ -63,12 +63,13 @@
 		"chai-as-promised": "^8.0.2",
 		"coveralls": "^3.1.1",
 		"debug": "^4.4.3",
-		"eslint": "^8.57.1",
-		"eslint-config-5app": "^0.19.1",
+		"eslint": "^9.39.2",
+		"eslint-config-5app": "^1.0.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-n": "^17.23.1",
 		"eslint-plugin-promise": "^7.2.1",
 		"eslint-plugin-security": "^3.0.1",
+		"globals": "^16.5.0",
 		"husky": "^9.1.7",
 		"is-ci": "^4.1.0",
 		"mocha": "^11.7.5",
