--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                node_version: [20, 22, 24]
+                node_version: [22, 24]
                 os: [ubuntu-latest, windows-latest, macOS-latest]
 
         steps:
