--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"@5app/semantic-release-config": "^2.0.0",
 		"@commitlint/cli": "^20.2.0",
 		"@commitlint/config-conventional": "^20.2.0",
+		"@types/mocha": "^10.0.10",
 		"c8": "^10.1.3",
 		"coveralls": "^3.1.1",
 		"debug": "^4.4.3",
@@ -69,6 +70,7 @@
 		"globals": "^16.5.0",
 		"husky": "^9.1.7",
 		"is-ci": "^4.1.0",
+		"mocha": "^11.7.5",
 		"mysql2": "3.16",
 		"pg": "^8.16.3",
 		"pg-query-stream": "^4.10.3",
