--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
 		"check-types": "tsc -p ./tsconfig.json",
 		"prepublish": "npm run check-types",
 		"test": "npm run spec && ((c8 report --reporter=text-lcov | coveralls) || exit 0)",
-		"test:ci": "eslint ./ && c8 mocha test/specs/**/*.spec.js --reporter mocha-circleci-reporter && (c8 report --reporter=text-lcov | coveralls)",
+		"test:ci": "eslint ./ && c8 node --test test/specs/**/*.spec.js && (c8 report --reporter=text-lcov | coveralls)",
 		"test:integration": "bash ./test/integration/run.sh",
-		"spec": "c8 mocha test/specs/**/*.spec.js",
+		"spec": "c8 node --test test/specs/**/*.spec.js",
 		"lint": "eslint ./ && npx prettier --check . && npm run check-types",
 		"prettier": "prettier --write --ignore-unknown .",
 		"lint-fix": "eslint --fix ./",
@@ -59,8 +59,6 @@
 		"@commitlint/config-conventional": "^20.2.0",
 		"@types/mocha": "^10.0.10",
 		"c8": "^10.1.3",
-		"chai": "^4.5.0",
-		"chai-as-promised": "^8.0.2",
 		"coveralls": "^3.1.1",
 		"debug": "^4.4.3",
 		"eslint": "^9.39.2",
@@ -73,7 +71,6 @@
 		"husky": "^9.1.7",
 		"is-ci": "^4.1.0",
 		"mocha": "^11.7.5",
-		"mocha-circleci-reporter": "0.0.3",
 		"mysql2": "3.16",
 		"pg": "^8.16.3",
 		"pg-query-stream": "^4.10.3",
